--- a/css/styles.css
+++ b/css/styles.css
@@ -395,6 +395,9 @@ img {
     margin-left: auto;
     margin-right: auto;
   }
+  .modal {
+    max-width: 100%;
+  }
 }
 .main-title {
   text-align: center;
@@ -757,6 +760,7 @@ img {
 }
 
 /* ==============================our clients=============================== */
+/* =============================== MOBILE ==============================*/
 
 .customers-title {
   font-weight: 700;
@@ -771,7 +775,11 @@ img {
 
 .customers-list-logo {
   display: flex;
-  gap: 24px;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 16px;
+  row-gap: 72px;
   align-items: center;
   justify-content: center;
 }
@@ -803,22 +811,38 @@ img {
 .icon-customers-list {
   fill: currentColor;
 }
-
+/* =============================== TABLET ==============================*/
+@media screen and (min-width: 768px) {
+  .customers-list-logo {
+    gap: 24px;
+  }
+}
+/* =============================== DESCTOP ==============================*/
+@media screen and (min-width: 1158px) {
+  .customers-list-logo {
+    flex-wrap: nowrap;
+  }
+}
 /* ==============================footer=============================== */
-
+/* =============================== MOBILE ==============================*/
 .footer {
   background-color: #2e2f42;
-  padding-top: 100px;
-  padding-bottom: 100px;
+  padding-top: 96px;
+  padding-bottom: 96px;
 }
 
 .footer-description {
+  text-align: start;
+  width: 264px;
   font-weight: 400;
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: #f4f4fd;
   max-width: 264px;
+  margin-bottom: 72px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .logo-web-footer {
@@ -827,22 +851,31 @@ img {
 
 .footer-logo-link {
   margin-bottom: 16px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .footer-container {
-  display: flex;
-  align-items: baseline;
+  max-width: 428px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .footer-description-container {
-  margin-right: 120px;
+  text-align: center;
 }
 
 .footer-social-network-conteiner {
-  margin-right: 80px;
+  display: flex;
+  flex-direction: column;
+  justify-items: center;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 72px;
 }
 
 .social-media-title {
+  text-align: center;
   font-weight: 500;
   font-size: 16px;
   line-height: 1.5;
@@ -853,6 +886,7 @@ img {
 
 .social-network-list-footer {
   display: flex;
+  justify-content: center;
   gap: 16px;
 }
 
@@ -883,8 +917,12 @@ img {
   fill: #f4f4fd;
 }
 
-.subscribe-title {
+.footer-subscribe-box {
   display: block;
+}
+.subscribe-title {
+  display: flex;
+  justify-content: center;
   margin-bottom: 16px;
   font-weight: 500;
   font-size: 16px;
@@ -894,16 +932,19 @@ img {
 }
 
 .footer-email-form {
-  display: flex;
 }
 
 .footer-label-email {
-  margin-right: 24px;
+  display: flex;
+
+  margin-bottom: 16px;
 }
 
 .footer-contact-form-input {
   width: 264px;
   height: 40px;
+  margin-left: auto;
+  margin-right: auto;
   border-radius: 4px;
   padding-left: 16px;
   font-size: 12px;
@@ -930,6 +971,8 @@ img {
   display: flex;
   justify-content: center;
   align-items: center;
+  margin-left: auto;
+  margin-right: auto;
   padding: 0;
   font-weight: 500;
   font-size: 16px;
@@ -964,6 +1007,56 @@ img {
   letter-spacing: 0.04em;
   color: #ffffff;
 }
+
+/* =============================== TABLET ==============================*/
+@media screen and (min-width: 768px) {
+  .footer-container {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: baseline;
+    max-width: 767px;
+  }
+  .footer-description-container {
+    text-align: start;
+  }
+  .footer-social-network-conteiner {
+    margin: 0 0 0 24px;
+  }
+  .social-media-title {
+    text-align: start;
+  }
+  .subscribe-title {
+    justify-content: start;
+  }
+  .footer-email-form {
+    display: flex;
+    gap: 24px;
+  }
+}
+
+/* =============================== DESCTOP ==============================*/
+@media screen and (min-width: 1158px) {
+  .footer {
+    padding: 100px 0;
+  }
+  .footer-container {
+    max-width: 100%;
+    margin-left: auto;
+    margin-right: auto;
+    flex-wrap: nowrap;
+  }
+  .footer-description-container {
+    margin-right: 120px;
+  }
+  .footer-social-network-conteiner {
+    margin-left: 0;
+    margin-right: 80px;
+  }
+  .footer-label-email {
+    margin: 0;
+  }
+}
+
 /* ==============================backdrop=============================== */
 
 .backdrop {
